[tool.poetry]
name = "thunderstruck"
version = "0.0.1"
description = "CDP based on ray.io"
authors = ["Data Platform <data.platform@typeform.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/afranzi/thunderstruck"
homepage = "https://github.com/afranzi/thunderstruck"

[tool.poetry.dependencies]
python = "^3.8"
ray = { extras = ["serve"], version = "^1.11.0" }
pydantic = "^1.9.0"
fastapi = "^0.75.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
mypy = "^0.942"

[tool.poetry.scripts]
thunder_server = "thunderstruck.dummy:app"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
